# endgame

./: .gitignore  .mcp.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  bn_demo.html  clf_report_demo.html  clf_report_demo_bn.html  clf_report_demo_structure.json  pyproject.toml  tan_report.html  tan_report_bn.html  tan_report_structure.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmarks/: README.md  run_calibration_benchmark.py  run_glassbox_benchmark.py  run_tabular_benchmark.py
docs/: adult_income_report.html  conf.py  index.rst  requirements.txt
docs/api/: anomaly.rst  automl.rst  benchmark.rst  calibration.rst  clustering.rst  dimensionality_reduction.rst  ensemble.rst  explain.rst  fairness.rst  feature_selection.rst  mcp.rst  models.rst  persistence.rst  preprocessing.rst  quick.rst  semi_supervised.rst  signal.rst  timeseries.rst  tracking.rst  tune.rst  utils.rst  validation.rst  visualization.rst
docs/demo/: breast_cancer_report.html  index.html  speeddating_report.html
docs/guides/: automl.md  calibration.md  ensembles.md  explainability.md  installation.md  mcp_server.md  models.md  preprocessing.md  quickstart.md  signal.md  timeseries.md  tracking.md  visualization.md
endgame/: __init__.py
endgame/anomaly/: __init__.py  gritbot.py  isolation_forest.py  lof.py  pyod_wrapper.py
endgame/audio/: __init__.py  augmentation.py  features.py  pretrained.py  sed.py  spectrogram.py
endgame/automl/: DEVELOPMENT.md  __init__.py  _safe_dim_reduce.py  audio.py  base.py  display.py  guardrails.py  model_registry.py  multimodal.py  orchestrator.py  predictor.py  preprocessing_registry.py  presets.py  report.py  stacker.py  tabular.py  text.py  time_manager.py  timeseries.py  vision.py
endgame/benchmark/: __init__.py  analyzer.py  learning_curve.py  loader.py  metalearner.py  profiler.py  report.py  runner.py  synthetic.py  tracker.py
endgame/calibration/: __init__.py  analysis.py  conformal.py  scaling.py  venn_abers.py
endgame/clustering/: __init__.py  auto.py  centroid.py  density.py  distribution.py  graph.py  hierarchical.py  scalable.py
endgame/core/: __init__.py  base.py  config.py  glassbox.py  polars_ops.py  types.py
endgame/data_quality/: __init__.py  drift.py  duplicates.py  profiler.py  valuation.py
endgame/dimensionality_reduction/: __init__.py  linear.py  manifold.py  vae.py
endgame/ensemble/: __init__.py  bagging.py  bayesian_averaging.py  blending.py  boosting.py  cascade.py  distillation.py  hill_climbing.py  multi_output.py  negative_correlation.py  snapshot.py  stacking.py  super_learner.py  threshold.py  voting.py
endgame/explain/: __init__.py  _base.py  counterfactual.py  interaction.py  lime_explainer.py  pdp.py  shap_explainer.py
endgame/fairness/: __init__.py  metrics.py  mitigation.py  report.py
endgame/feature_selection/: __init__.py  knockoff.py  stability.py
endgame/fuzzy/: __init__.py
endgame/guardrails/: __init__.py  detector.py  report.py  utils.py
endgame/kaggle/: __init__.py  client.py  competition.py  project.py
endgame/mcp/: __init__.py  __main__.py  codegen.py  resources.py  server.py  session.py
endgame/models/: __init__.py  ebm.py  multiclass.py  ngboost.py  wrappers.py
endgame/models/trees/c50_rust/: Cargo.toml  __init__.py  pyproject.toml
endgame/models/trees/c50_rust/src/: boost.rs  classify.rs  info.rs  lib.rs  prune.rs  split.rs  tree.rs  types.rs
endgame/models/trees/cubist_rust/: Cargo.toml  pyproject.toml
endgame/models/trees/cubist_rust/src/: lib.rs  predict.rs  regress.rs  rules.rs  split.rs  tree.rs  types.rs
endgame/nlp/: __init__.py  dapt.py  llm.py  metrics.py  postprocessing.py  preprocessing.py  pseudo_label.py  tokenizer.py  transformers.py  translation.py
endgame/persistence/: __init__.py  _backends.py  _core.py  _detection.py  _metadata.py  _onnx.py  _server.py
endgame/preprocessing/: __init__.py  aggregation.py  dae.py  discretize.py  encoding.py  imbalance.py  imbalance_generative.py  imbalance_geometric.py  imbalance_llm.py  imputation.py  noise_detection.py  selection.py  target_transform.py  temporal.py
endgame/quick/: __init__.py  api.py
endgame/semi_supervised/: __init__.py  self_training.py
endgame/signal/: __init__.py  base.py  complexity.py  connectivity.py  entropy.py  features.py  filtering.py  spatial.py  spectral.py  wavelets.py
endgame/survival/: __init__.py  base.py  competing_risks.py  cox.py  datasets.py  ensemble.py  gbdt.py  metrics.py  neural.py  nonparametric.py  parametric.py  trees.py  (+1 more)
examples/: 00_hello_endgame.ipynb  01_quickstart.ipynb  02_interpretable_models.ipynb  03_automl.ipynb  04_ensemble_calibration.ipynb  05_mcp_walkthrough.ipynb  06_signal_timeseries.ipynb  07_vision.ipynb  08_nlp.ipynb  09_multimodal.ipynb  colab_quickstart.ipynb  german_credit_lgbm.egm  quickstart_report.html
scripts/: benchmark_bayesian_models.py  benchmark_endgame_models.py  benchmark_tabular_deep_learning.py  generate_viz_images.py  run_benchmark.py  run_best_quality.py  run_evolutionary.py  run_interpretable.py  test_automl_pipeline.py  test_search_strategies.py  tree_viz_demo.py
tests/: __init__.py  test_adtree.py  test_anomaly.py  test_audio.py  test_automl.py  test_bayesian.py  test_bayesian_network_visualizer.py  test_benchmark.py  test_c50.py  test_clustering.py  test_core.py  test_cpcv.py  test_cqr.py  test_data_quality.py  test_dimensionality_reduction.py  test_distillation.py  test_ensemble.py  test_explain.py  test_fairness.py  test_feature_selection.py  test_furia.py  test_fuzzy.py  test_gandalf.py  test_glassbox_structure.py  test_grande.py  test_guardrails.py  test_imbalance.py  test_imbalance_generative.py  test_imbalance_geometric.py  test_imbalance_llm.py  test_imputation.py  test_interpretable.py  test_kaggle.py  test_mcp.py  test_models.py  test_multi_output.py  test_nested_cv.py  test_ngboost.py  test_nlp.py  test_nlp_translation.py  (+28 more)
(+267 files in other folders)
