[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "c50"
version = "0.1.0"
description = "High-performance C5.0 decision tree with Python bindings"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "endgame.models.trees.c50_rust"
