[package]
name = "cubist"
version = "0.1.0"
edition = "2021"
authors = ["Cameron"]
description = "High-performance Cubist regression tree implementation"

[lib]
name = "cubist_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"

# Parallelism
rayon = "1.8"

# Fast random number generation
rand = "0.8"
rand_xoshiro = "0.6"

# Efficient collections
hashbrown = "0.14"

# Numeric operations
num-traits = "0.2"
ordered-float = "4.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
